# ptt-cli

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  ptt-cli.cabal
.github/ISSUE_TEMPLATE/: story-template.md
app/: Main.hs
nix/: project.nix  shell.nix
src/Cardano/PTT/CLI/: Arguments.hs  Coverage.hs  Internal.hs  Process.hs
src/Cardano/PTT/CLI/Embedded/: list-tests.sh  shell-wrapper.sh
test/: Main.hs
test/Coverage/: Spec.hs
