cabal-version:      3.0
name:               ptt-cli

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Bogdan Manole
maintainer:         bogdan.manole@iohk.io
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: src/Cardano/PTT/CLI/Embedded/*
default-extensions:   OverloadedRecordDot


common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:   Cardano.PTT.CLI.Process
                     , Cardano.PTT.CLI.Arguments

    other-modules:   Cardano.PTT.CLI.Internal
    build-depends:     base ^>=4.18.1.0
                     , process
                     , text
                     , template-haskell
                     , neat-interpolation
                     , temporary
                     , split
                     , optparse-applicative
                     , async
                     , aeson
                     , bytestring
                     , regex-tdfa
                     -- , filepath

    hs-source-dirs:   src
    default-language: Haskell2010

executable ptt-cli
    import:           warnings

    main-is:          Main.hs

    build-depends:
                       base ^>=4.18.1.0
                     , ptt-cli
                     , optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ptt-cli-test
    import:           warnings

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.1.0,
        ptt-cli
