cabal-version:      3.0
name:               ptt-cli

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             Bogdan Manole
maintainer:         bogdan.manole@iohk.io
category:           Development
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files: src/Cardano/PTT/CLI/Embedded/*
default-extensions:   OverloadedRecordDot

common lang
  default-language:   Haskell2010
  default-extensions:
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    ExplicitForAll
    FlexibleContexts
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    LambdaCase
    NamedFieldPuns
    ScopedTypeVariables
    StandaloneDeriving

  -- See Plutus Tx readme for why we need the following flags:
  -- -fobject-code -fno-ignore-interface-pragmas and -fno-omit-interface-pragmas
  ghc-options:
    -Wall -Widentities -Wincomplete-record-updates -Wunused-packages
    -Wincomplete-uni-patterns -Wnoncanonical-monad-instances
    -Wredundant-constraints -fobject-code
    -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    -fplugin-opt PlutusTx.Plugin:target-version=1.0.0

library
    import:           lang
    exposed-modules:   Cardano.PTT.CLI.Process
                     , Cardano.PTT.CLI.Arguments

    other-modules:     Cardano.PTT.CLI.Internal
                     , Cardano.PTT.CLI.Coverage
    build-depends:     base ^>=4.18.1.0
                     , process
                     , text
                     , template-haskell
                     , neat-interpolation
                     , temporary
                     , split
                     , optparse-applicative
                     , async
                     , aeson
                     , bytestring
                     , regex-tdfa
                     , filepath
                     , plutus-tx
                     , containers

    hs-source-dirs:   src
    default-language: Haskell2010

executable ptt-cli
    import:           lang

    main-is:          Main.hs

    build-depends:
                       base ^>=4.18.1.0
                     , ptt-cli
                     , optparse-applicative

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite ptt-cli-test
    import:           lang

    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
          base ^>=4.18.1.0
        , ptt-cli
        , tasty
        , tasty-hunit
